--- a/CNN_validation.ipynb
+++ b/CNN_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,15 +115,46 @@
     "    return max_tnsr.index(max_num)\n",
     "\n",
     "\n",
-    "def val_func(convNet, cnn_num,valDS, x_val, y_val):\n",
-    "    right_val = [0]*cnn_num # represents the 10 cnns\n",
+    "def val_func(convNet, cnn_num,valDS): # Selects the best network\n",
+    "                                                #   out of n networks\n",
+    "    cnns_loss = [0]*cnn_num # represents the 10 cnns\n",
     "    print(\"\\n| Starting validation set run |\\n\")\n",
     "    for val_sample in valDS:\n",
     "        for j in range(cnn_num):\n",
-    "            prediction = convNet[j].forward(torch.squeeze(x_val))\n",
-    "            if max_index(prediction) == y_val:\n",
-    "                right_val[j]+=1\n",
-    "                convNet = convNet[max_index(right_val)]\n"
+    "            prediction = convNet[j].forward(torch.squeeze(val_sample[0]))\n",
+    "            loss_func = nn.CrossEntropyLoss()\n",
+    "            loss = loss_func(prediction, val_sample[1])\n",
+    "            cnns_loss[j]+=loss # Adds the loss of the\n",
+    "    cnns_loss = [j*-1 for j in cnns_loss]\n",
+    "    return convNet[max_index(cnns_loss)]# picks the cnn with the lowest loss\n",
+    "\n",
+    "\n",
+    "def train_one_epoch(Cnn, FILE_PATH, train_ds, optimizer):\n",
+    "    iter = 0\n",
+    "\n",
+    "    for sample in train_ds:\n",
+    "        targetY = torch.nn.functional.one_hot(\n",
+    "        torch.tensor(sample[1]), num_classes=10)\n",
+    "        targetY = torch.tensor(targetY, dtype=torch.float32, requires_grad=True)\n",
+    "        targetY = torch.squeeze(targetY)\n",
+    "            \n",
+    "        #optimizer = optim.Adam(params=Cnn.parameters(), weight_decay=0.1\n",
+    "        #                      , lr=1e-4, betas=[0.09, 0.0999])\n",
+    "        \n",
+    "        pred = Cnn.forward(torch.squeeze(sample[0]))\n",
+    "        loss_func = nn.CrossEntropyLoss()\n",
+    "        # ---BackPropagation---\n",
+    "        loss = loss_func(pred, targetY)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        if iter%100==0:\n",
+    "            torch.save(Cnn.cpu(), FILE_PATH)\n",
+    "            grad_tmp = Cnn.linL5.weight.grad\n",
+    "            print(iter,\" | \",grad_tmp.sum()/len(grad_tmp))\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        iter+=1\n"
    ]
   },
   {
@@ -135,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,123 +175,72 @@
     "cnn_num = 10\n",
     "\n",
     "\n",
-    "def train_net(cnn, train_ds, val_ds, dev):\n",
-    "    iter = 0\n",
-    "    lrs = [num / int(1e4) for num in range(1, 10)]# The learning rates of\n",
+    "def train_net(cnn, train_ds, pretrain_ds, val_ds, dev):\n",
+    "    lrs = [num / int(1e4) for num in range(1, 11)]# The learning rates of\n",
     "                                                #the 10 different CNNs\n",
-    "    momentums = [num / 10 for num in range(1,10)]\n",
+    "    momentums = [num/10 + 0.09 for num in range(0,10)]\n",
     "    momentums = momentums[4:] + momentums[:4]# Shift from the middle\n",
-    "\n",
+    "    \n",
     "    #optimizer = optim.Adam(params=cnn.parameters(), weight_decay=0.01\n",
     "    #                    , lr=1e-4, betas=[0.6, 0.6])\n",
+    "    \n",
     "\n",
-    "    # Training loop part\n",
-    "    for sample in train_ds:\n",
-    "        for i in range(len(cnn)):\n",
-    "            \n",
-    "        \n"
+    "    # Multiple pretraining part with a minibatch (10,000)\n",
+    "    for i in range(len(cnn)):\n",
+    "        optimizer = optim.SGD(params=cnn[i].parameters(), lr=lrs[i],\n",
+    "                            momentum=momentums[i], weight_decay=0.0001)\n",
+    "        train_one_epoch(cnn[i], FILE_PATH, train_ds=pretrain_ds, optimizer=optimizer)\n",
+    "\n",
+    "    optimizer = optim.SGD(params=cnn.parameters(), lr=8e-4,\n",
+    "                            momentum=0.699,\n",
+    "                            weight_decay=0.0001)\n",
+    "\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\orian\\AppData\\Local\\Temp\\ipykernel_34080\\3604079781.py:6: FutureWarning: `nn.init.kaiming_normal` is now deprecated in favor of `nn.init.kaiming_normal_`.\n",
-      "  nn.init.kaiming_normal(self.convL1.weight)\n",
-      "C:\\Users\\orian\\AppData\\Local\\Temp\\ipykernel_34080\\3604079781.py:9: FutureWarning: `nn.init.kaiming_normal` is now deprecated in favor of `nn.init.kaiming_normal_`.\n",
-      "  nn.init.kaiming_normal(self.convL2.weight)\n",
-      "C:\\Users\\orian\\AppData\\Local\\Temp\\ipykernel_34080\\3604079781.py:12: FutureWarning: `nn.init.kaiming_normal` is now deprecated in favor of `nn.init.kaiming_normal_`.\n",
-      "  nn.init.kaiming_normal(self.convL1.weight)\n",
-      "C:\\Users\\orian\\AppData\\Local\\Temp\\ipykernel_34080\\4244664313.py:22: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(sample[1]), num_classes=10)\n",
-      "C:\\Users\\orian\\AppData\\Local\\Temp\\ipykernel_34080\\4244664313.py:23: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  targetY = torch.tensor(targetY, dtype=torch.float32, requires_grad=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0  |  tensor(-3.4571e-07)\n",
-      "100  |  tensor(1.9670e-07)\n",
-      "200  |  tensor(2.0117e-08)\n",
-      "300  |  tensor(3.0249e-07)\n",
-      "400  |  tensor(5.9046e-08)\n",
-      "500  |  tensor(-1.4305e-07)\n",
-      "600  |  tensor(3.1143e-07)\n",
-      "700  |  tensor(2.7120e-07)\n",
-      "800  |  tensor(1.6717e-08)\n",
-      "900  |  tensor(1.8394e-07)\n",
-      "1000  |  tensor(5.7518e-07)\n",
-      "1100  |  tensor(-1.4976e-07)\n",
-      "1200  |  tensor(-6.8918e-08)\n",
-      "1300  |  tensor(-1.1101e-07)\n",
-      "1400  |  tensor(-1.0147e-07)\n",
-      "1500  |  tensor(-1.5944e-07)\n",
-      "\n",
-      "| Starting validation set run |\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\orian\\AppData\\Local\\Temp\\ipykernel_34080\\2157939635.py:15: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  max_tnsr = torch.tensor(max_tnsr)\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[55], line 32\u001b[0m\n\u001b[0;32m     28\u001b[0m test_data, val_data \u001b[38;5;241m=\u001b[39m random_split(\n\u001b[0;32m     29\u001b[0m     test_ds, [val_split, \u001b[38;5;28mlen\u001b[39m(test_ds)\u001b[38;5;241m-\u001b[39mval_split])\n\u001b[0;32m     31\u001b[0m train_data \u001b[38;5;241m=\u001b[39m DataLoader(train_data, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 32\u001b[0m \u001b[43mtrain_net\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdev\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[54], line 18\u001b[0m, in \u001b[0;36mtrain_net\u001b[1;34m(cnn, train_ds, val_ds, dev)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m train_ds:\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(cnn)):\n\u001b[1;32m---> 18\u001b[0m         optimizer \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mSGD(params\u001b[38;5;241m=\u001b[39m\u001b[43mcnn\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-3\u001b[39m,\n\u001b[0;32m     19\u001b[0m                         momentum\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.699\u001b[39m, weight_decay\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.0001\u001b[39m)\n\u001b[0;32m     21\u001b[0m         targetY \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mfunctional\u001b[38;5;241m.\u001b[39mone_hot(\n\u001b[0;32m     22\u001b[0m             torch\u001b[38;5;241m.\u001b[39mtensor(sample[\u001b[38;5;241m1\u001b[39m]), num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m     23\u001b[0m         targetY \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(targetY, dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mfloat32, requires_grad\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "\n",
     "    # Accessing processing unit\n",
+    "    net = [0]*cnn_num\n",
     "    if torch.cuda.is_available() : device = \"cuda:0\"\n",
     "    else : device = \"cpu\"\n",
     "    device = torch.device(device)\n",
-    "    net = [0]*10\n",
-    "    for i in range(len(net)):                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            \n",
+    "    for i in range(cnn_num):\n",
     "        net[i]=CNN().to(device)\n",
     "\n",
     "    # Loading the dataset\n",
-    "    #for i in range(2):\n",
+    "\n",
     "    train_data = torchvision.datasets.CIFAR10(\n",
     "        root= \"C:/Users/orian/OneDrive/שולחן העבודה/My Coding Files\"\n",
-    "        ,train=True, transform=transforms.Compose([transforms.ToTensor(),\n",
-    "                        transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
-    "                    ])\n",
+    "        ,train=True, transform=transforms.Compose([transforms.ToTensor()\n",
+    "                        #,transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+    "                        ])\n",
     "        #, target_transform=transforms.Compose([transforms.ToTensor()])\n",
     "    )\n",
     "\n",
-    "    \n",
+    "    val_split = 500\n",
+    "    pretrain_ds, tmp = random_split(train_data, \n",
+    "                [val_split, len(train_data)-val_split])\n",
+    "    pretrain_ds = DataLoader(pretrain_ds, shuffle=True)\n",
+    "    train_data = DataLoader(train_data, shuffle=True)\n",
+    "\n",
     "    test_ds = torchvision.datasets.CIFAR10(\n",
     "            root= \"C:/Users/orian/OneDrive/שולחן העבודה/My Coding Files\"\n",
     "            ,train=False, transform=transforms.Compose([transforms.ToTensor()]), \n",
     "        )\n",
-    "    val_ratio = 0.1\n",
+    "    val_ratio = 0.01\n",
     "    val_split = int(val_ratio*len(test_ds))\n",
-    "    test_data, val_data = random_split(\n",
-    "        test_ds, [val_split, len(test_ds)-val_split])\n",
-    "        \n",
-    "    train_data = DataLoader(train_data, shuffle=True)\n",
-    "    train_net(net, train_data, val_data, dev=device)\n"
+    "    val_data, test_data = random_split(\n",
+    "        test_ds, [val_split, len(test_ds)-val_split]\n",
+    "    )\n",
+    "    \n",
+    "    train_net(net, train_data, pretrain_ds, val_data, dev=device)\n"
    ]
   },
   {
