--- a/CNN_file_GPU.ipynb
+++ b/CNN_file_GPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,31 +161,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "FILE_PATH = \"model.pth\"\n",
     "\n",
-    "def train_net(cnns, train_ds, val_ds, dev):\n",
+    "def train_net(cnn, train_ds, val_ds, dev):\n",
     "    iter = 0\n",
-    "    epoch_num = 6 # Determines the epoch number\n",
-    "    \n",
+    "    epoch_num = 3 # Determines the epoch number\n",
     "\n",
     "    # Pre-train and validation phase\n",
     "    valtr_num = 2000 # The scale of the minibatch used to train the CNNs that are to be validated\n",
     "    val_train, reg_train = random_split(train_ds, [valtr_num, len(train_ds)-valtr_num])\n",
-    "    for uno_cnn in cnns:\n",
-    "        optimizer = optim.SGD(params=uno_cnn.parameters(), lr=6.9e-4,\n",
-    "                          momentum=0.9,\n",
-    "                          weight_decay=1e-4)\n",
-    "        train_one_epoch(uno_cnn, FILE_PATH, valtr_num, optimizer, dev, -1)\n",
+    "    #train_one_epoch()\n",
     "\n",
     "    # Multiple epoch training phase\n",
-    "    for i in range(epoch_num):\n",
-    "        optimizer = optim.SGD(params=cnn.parameters(), lr=6.9e-4,\n",
+    "    optimizer = optim.SGD(params=cnn.parameters(), lr=7.25e-4,\n",
     "                          momentum=0.9,\n",
     "                          weight_decay=1e-4)\n",
+    "    for i in range(epoch_num):\n",
     "        train_one_epoch(cnn, FILE_PATH, train_ds, optimizer, dev,i)\n"
    ]
   },
