--- a/CNN_file_GPU.ipynb
+++ b/CNN_file_GPU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,9 @@
     "import torchvision\n",
     "from torchvision import transforms, datasets \n",
     "import time\n",
-    "import random"
+    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "from AddFunc import ret_shape,max_index,val_func"
    ]
   },
   {
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,53 +83,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Additional Functions"
+    "Single epoch training function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ret_shape(training_set)->str:\n",
-    "    ret_string = \"\"\n",
-    "    for idx, data in enumerate(training_set):\n",
-    "            datas = data[0]\n",
-    "            labels = data[1]\n",
-    "            ret_string+=\"{}\\n\".format(datas.shape)\n",
-    "            ret_string+=\"Labels:{}\\n\".format(labels)\n",
-    "            ret_string+=\"Labels shape:{}\\n\".format(len(labels))\n",
-    "            ret_string+=\"Labels[0] shape:{}\\n\".format(labels[0].shape)\n",
-    "            break\n",
-    "    return ret_string\n",
     "\n",
-    "\n",
-    "def max_index(max_tnsr):\n",
-    "    max_tnsr = max_tnsr.tolist()\n",
-    "    max_num = 0\n",
-    "    for num in max_tnsr:\n",
-    "        if max_num < num:\n",
-    "            max_num = num\n",
-    "    return max_tnsr.index(max_num)\n",
-    "\n",
-    "def val_func(convNet, cnn_num,valDS, dev): # Selects the best network\n",
-    "                                                #   out of n networks\n",
-    "    cnns_loss = [0]*cnn_num # represents the 10 cnns\n",
-    "    print(\"\\n| Starting validation set run |\\n\")\n",
-    "    for val_sample in valDS:\n",
-    "        for j in range(cnn_num):\n",
-    "            prediction = convNet[j].forward(torch.squeeze(val_sample[0].to(dev)))\n",
-    "            loss_func = nn.CrossEntropyLoss()\n",
-    "            loss = loss_func(prediction, val_sample[1].to(dev))\n",
-    "            cnns_loss[j]+=loss # Adds the loss of the\n",
-    "    cnns_loss = [j*-1 for j in cnns_loss]\n",
-    "    return convNet[max_index(cnns_loss)]# picks the cnn with the lowest loss\n",
-    "\n",
-    "def train_one_epoch(cnn, FILE_PATH, train_ds, optimizer, dev, epoch_iter):\n",
+    "def train_one_epoch(cnn, FILE_PATH, train_ds, optimizer, dev, epoch_iter, tr_error):\n",
     "    iter = 0\n",
-    "\n",
-    "\n",
+    "    tr_error.append(0)\n",
+    "    \n",
     "    # Training loop part\n",
     "    for sample in train_ds:\n",
     "        cnn = cnn.to(dev) # Added due to errors (Should remain in the loop)\n",
@@ -146,10 +115,13 @@
     "        if iter%100==0:\n",
     "            torch.save(cnn.cpu(), FILE_PATH)\n",
     "            grad_tmp = cnn.linL4.weight.grad\n",
-    "            print(iter,\"({})\".format(epoch_iter+1), \" | \",grad_tmp.sum()**2/len(grad_tmp))\n",
+    "            tr_error[epoch_iter]+=loss\n",
+    "            print(iter,\"({})\".format(epoch_iter+1), \" | \",abs(grad_tmp.sum())/len(grad_tmp))\n",
     "\n",
     "        optimizer.zero_grad()\n",
-    "        iter+=1"
+    "        iter+=1\n",
+    "    \n",
+    "    tr_error[epoch_iter] /= iter # To calculate a mean error"
    ]
   },
   {
@@ -161,27 +133,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "FILE_PATH = \"model.pth\"\n",
+    "tr_error = [] #The total error of the train time at a single epoch\n",
     "\n",
-    "def train_net(cnn, train_ds, val_ds, dev):\n",
+    "def train_net(cnn, train_ds, val_ds, dev,test_data):\n",
     "    iter = 0\n",
-    "    epoch_num = 3 # Determines the epoch number\n",
+    "    epoch_num = 7 # Determines the epoch number\n",
     "\n",
     "    # Pre-train and validation phase\n",
-    "    valtr_num = 2000 # The scale of the minibatch used to train the CNNs that are to be validated\n",
-    "    val_train, reg_train = random_split(train_ds, [valtr_num, len(train_ds)-valtr_num])\n",
-    "    #train_one_epoch()\n",
+    "    #valtr_num = 2000 # The scale of the minibatch used to train the CNNs that are to be validated\n",
+    "    #val_train, reg_train = random_split(train_ds, [valtr_num, len(train_ds)-valtr_num])\n",
     "\n",
     "    # Multiple epoch training phase\n",
-    "    optimizer = optim.SGD(params=cnn.parameters(), lr=7.25e-4,\n",
+    "    optimizer = optim.SGD(params=cnn.parameters(), lr=6.25e-4,\n",
     "                          momentum=0.9,\n",
-    "                          weight_decay=1e-4)\n",
+    "                          weight_decay=2e-5)\n",
+    "    #optimizer = optim.Adam(params=cnn.parameters(),lr=5e-4, betas=[0.99,0.999])\n",
+    "    test_epoch_loss = 0\n",
     "    for i in range(epoch_num):\n",
-    "        train_one_epoch(cnn, FILE_PATH, train_ds, optimizer, dev,i)\n"
+    "        test_epoch_loss = 0\n",
+    "        train_one_epoch(cnn, FILE_PATH, train_ds, optimizer, dev,epoch_iter=i, tr_error=tr_error)\n",
+    "        for i in range(len(test_data)):\n",
+    "            test_epoch_loss+=\n",
+    "\n"
    ]
   },
   {
@@ -204,7 +182,7 @@
     "        ,train=True, transform=transforms.Compose([transforms.ToTensor()])\n",
     "        #, target_transform=transforms.Compose([transforms.ToTensor()])\n",
     "    )\n",
-    "    train_data = DataLoader(train_data, shuffle=True)\n",
+    "    train_data = DataLoader(train_data, shuffle=True, num_workers=3)\n",
     "\n",
     "    test_data = torchvision.datasets.CIFAR10(\n",
     "        root= \"C:/Users/orian/OneDrive/שולחן העבודה/My Coding Files\"\n",
@@ -213,7 +191,7 @@
     "    val_data, test_data = random_split(test_data, [1000, len(test_data)-1000])\n",
     "\n",
     "    \n",
-    "    train_net(net, train_data, val_data,dev=device)\n"
+    "    train_net(net, train_data, val_data,dev=device,test_data=test_data)\n"
    ]
   },
   {
@@ -234,15 +212,19 @@
     "model.eval()\n",
     "\n",
     "\n",
-    "\n",
     "image_lst = [0]*10\n",
     "right_pred = 0\n",
+    "\n",
     "for i in range(len(test_data)):\n",
     "    if max_index(model.forward(test_data[i][0]))==test_data[i][1]:\n",
     "        right_pred+=1\n",
     "    image_lst[max_index(model.forward(test_data[i][0]))]+=1\n",
     "print(\"model's accuracy:\",right_pred/100,\"%\")\n",
-    "print(image_lst)"
+    "print(image_lst)\n",
+    "\n",
+    "tr_err_arr = [j.detach().cpu().numpy() for j in tr_error] # Converts the cuda tensor to numpy\n",
+    "plt.plot(tr_err_arr) \n",
+    "plt.show()\n"
    ]
   }
  ],
